# pyshbundle

./: # this script lists the method to create.yml  .gitignore  404.html  LICENSE  LICENSE.md  MANIFEST.in  README.md  environment.yml  index.html  index.md  master.ipynb  mathematical_background.md  mkdocs.yml  objects.inv  paper  paper.bib  paper.html  paper.md  paper_joss.md  paper_local.md  paper_with_equations.md  pending.md  pyproject.toml  pyshbundle_env.yml  read_GRACE_SH_paths.py  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  sitemap.xml  temp.txt  test_AS_202401014.ipynb  validation_pyshbundle.ipynb  validation_scrpit.ipynb
.ipynb_checkpoints/: master-checkpoint.ipynb  test_AS_202401014-checkpoint.ipynb
GRACEbundle/: GRACE_Data_Driven_Correction_Vishwakarma.py  GRACEconstants.py  Phase_calc.py  eigengrav_AS.py  gsha.py  gshs.py  gshs_AS_20220917.py  neumann.py  neumann_5hk_20220824.py  plm.py  statistical_downscaling_grids_TWS.py
acknowledgement/: acknowledgement.md  index.html
auxillary_codes/: auxillary_codes.md  index.html
changelog/: index.html
contributing/: contributing.md  index.html
convert_data_formats/: convert_data_formats.md  index.html
core_functionality/: core_functionality.md  index.html
docs/: acknowledgement.md  auxillary_codes.md  contributing.md  convert_data_formats.md  core_functionality.md  index.md  installation.md  license.md  load_data.md  pyshbundle.md  theory.md  tutorials.md  usage.md
examples/: 01_intro_spherical_harmonics_with_pyshbundle.ipynb  02_load_data.ipynb  03_visualizations.ipynb  (+2 more)
faq/: faq.md  (+1 more)
(+386 files in other folders)
